# images-redact

./: CMakeLists.txt
src/: main.c
ui/: main.glade~
